www/popup.css
/*START POPUP*/

.leaflet-popup{
  width:512px;

}

.description{
  margin-bottom: 12px;

}

.leaflet-popup-content {
  margin: 0px 0px 0px 0px;
  width: 100% !important;
  display:block;
  border: 0px solid purple;
  
}
.leaflet-popup-content-wrapper{
  padding: 0px 0px 0px 0px;
  
}

.popup-wrapper{
    border: 0px solid red;
    width: 100%;
    min-height: 240px;

}
.popup-title{
  width: 100%;
  height: 50px;
  border: 0px solid blue;
  float: left;
  display: block;
  z-index: 1000;
}
.popup-title-marker{
  width: 47px;
  height: 47px;
  border: 0px solid green;
  float: left;
  display: block;
  background-size: cover;
  margin-left: -6px;
  margin-right: 2px;
  
}
.popup-title-text{
  padding-left:10px;
  
}

.popup-title-h1{
  border:0px solid red;
 /* width: 70%;*/
  float:left; 
  display:block; 
  font-size: 20px; 
  font-weight: bold;
}
.popup-title-h2{
  line-height: 14px; 
  border:0px solid red; 
  width: 70%;
  min-width: 200px;
  float:left;
  display:block; 
  font-size: 15px; 
  font-weight: normal;
  overflow-x: ellipsis;
}
.pu-h2-adj{
  width: 100%;
 /* margin-top:10px;
  */
}
.popup-line{
  float:left;
  clear:left; 
  display:block; 
  padding-top:4px;
  width:100%;
  border: 0px solid red;
  
}
.popup-line-adj{
  padding-top:0px;
  line-height: 15px;
  
}
.popup-image{
  width:160px;
  max-width: 160px;
  min-height: 240px;
  overflow: hidden;
  display: block;
  z-index: 300;
  float: left;
  text-align: center;
  border:0px solid green;
  background-size: cover;
  background-position: center;
   background-repeat: no-repeat;
   border-top-left-radius: 9px;
   border-bottom-left-radius: 9px;

  
}
.pu-img{
   max-width:100%;
    max-height:100%;
    vertical-align: middle;
  
}
.popup-text{
  width:350px;
  max-height: 240px;
  overflow-y: auto;
  overflow-x: hidden;
  display: block;
  padding: 4px 12px 4px 12px;
  float: left;
  border:0px solid pink;
  direction:ltr;

}
  .popup-line-description{
    line-height:15px;
    display:inline-block;
    overflow:hidden;
    text-overflow: ellipsis;
  }


.marker-resize-01 {
  width: 95px !important;
  height: 41px !important;
  margin-right: 5px;
}
.marker-resize-02 {
  width: 47px !important;
  height: 47px !important;
}
/*END KEY POPUP*/



@media only screen and (max-width: 832px) {

  .leaflet-popup{
    width:260px;
  }
  .popup-wrapper{

    min-height: 120px;

  }
  .popup-title{
    height:25px;
  }
  .popup-image {
    width: 80px;
    max-width: 80px;
    min-height: 120px;
  }
  .popup-text {
    width: 180px;
    display: block;
    padding: 2px 2px 2px 6px;
    max-height: 120px;
  }

  .popup-line{
    font-size: 10px;
    line-height: 1;
  }

  .marker-resize-01 {
    width: 46px !important;
    height: 20px !important;
    margin-right: 0px;
  }
   .marker-resize-02 {
    width: 24px !important;
    height: 24px !important;
    margin-right: 2px !important;
  }

  .popup-title-h1 {
    font-size: 12px;
  }
  .popup-title-h2 {
    font-size: 10px;
    margin-top: -5px;
    min-width: 20px;
  }
  .pu-h2-adj{
    margin-top: 0px;
    line-height: 1;
  }
  .no-left-margin{
    margin-left: 0px !important;
  }
  .popup-title-marker{
     margin-left: -4px;
    margin-right: 0px;


  }
}

